added class date for the date when I wrote the blog and added some style to it

--- a/index.css
+++ b/index.css
@@ -33,3 +33,8 @@ p {
     font-family: cursive;
     line-height: 27px;
 }
+.date {
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    margin: 0;
+}
